# pysocks

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
gera2ld/socks/: __init__.py
gera2ld/socks/client/: __init__.py  base.py  handler.py  socks4.py  socks5.py  udp.py
gera2ld/socks/server/: __init__.py  __main__.py  base.py  config.py  logger.py  proxy.py  socks4.py  socks5.py  udp.py
gera2ld/socks/utils/: __init__.py  base.py  dns.py  error.py  proxy.py  socks4.py  socks5.py  udp.py
socks/: __init__.py
socks/client/: base.py  handler.py  socks4.py  socks5.py
socks/server/: __init__.py  __main__.py  base.py  config.py  proxy.py  socks4.py  socks5.py
socks/utils/: __init__.py  dns.py  protocol.py  socks5.py
tests/: base.py  server.py  socks4client.py  socks5client.py  test_client.py  test_server.py  test_utils.py  utils.py
tests/utils/: test_dns.py  test_proxy.py  test_socks4.py  test_socks5.py  test_udp.py
