[tool.poetry]
name = "gera2ld.socks"
version = "0.1.1"
description = "SOCKS client and server based on asyncio"
authors = ["Gerald <gera2ld@163.com>"]
license = "MIT"
repository = "https://github.com/gera2ld/pysocks"
packages = [
  { include = 'gera2ld' },
]

[tool.poetry.dependencies]
python = "^3.6"
gera2ld-pyserve = "^0.1.1"
async_dns = "^1.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
