[tool.poetry]
name = "gera2ld.socks"
version = "0.4.5"
description = "SOCKS client and server based on asyncio"
authors = ["Gerald <gera2ld@163.com>"]
license = "MIT"
repository = "https://github.com/gera2ld/pysocks"
readme = 'README.md'
packages = [
  { include = 'gera2ld' },
]

[tool.poetry.dependencies]
python = "^3.7"
gera2ld-pyserve = "^0.3.0"
async_dns = "^1.1.3"

[tool.poetry.dev-dependencies]
jedi = "^0.17.2"
pylint = "^2.6.0"
rope = "^0.18.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
